[refs #86440] Fix spacing and background for pagination

--- a/insitu/static/css/style.css
+++ b/insitu/static/css/style.css
@@ -3,22 +3,26 @@
     max-width: 100%;
 }
 
-.orange{
+.orange {
     color: #FC7300;
 }
 
-.blue{
+.blue {
     color: #00529B;
 }
 
-.green{
+.green {
     color: #007B2B;
 }
 
-.no-padding-left{
+.no-padding-left {
     padding-left: 0;
 }
-.paginate_button.active:hover {
-    background: #eee !important;
-    border: 1px #ddd !important;
+
+.paginate_button:hover {
+    border: 0px !important;
+}
+
+.paginate_button {
+    padding: 0 !important;
 }
